add navbar and main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 	<title>movie details</title>
 </head>
 <body>
-	
+	<header>
+		<h1>Movie Detail</h1>
+		<nav>
+			<ul>
+				<li>
+					<a href="#">home</a>
+				</li>
+				<li>
+					<a href="#">Genre</a>
+				</li>
+				<li>
+					<a href="#">Coming Soon</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<h2>main content</h2>
+	</main>
 </body>
 </html>
