feat: add content and sidebar

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 		</header>
 	
 		<main>
-			<h2>main content</h2>
+			<content>
+				<h2>main content</h2>
+			</content>
+			<aside>
+				<h2>sidebar</h2>
+			</aside>
 		</main>
 	</div>
 
