feat: add movie-details feature

--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
 				<div class="main-movie">
 					
 				</div>
+
+				<div class="movie-details">
+					
+				</div>
 			</content>
 			<aside>
-				<h2>sidebar</h2>
+				<h3>sidebar</h3>
 			</aside>
 		</main>
 	</div>
