update: update sidebar

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 
 				<div class="jumbotron">
 					<img class="hero" src="https://www.nextbestpicture.com/uploads/7/1/0/2/71028997/doctor-strange-in-the-multiverse-of-madness-review_orig.jpg" alt="doctor strange">
-					<h3 class="title"><span>Doctor Strange</span> In The Multiverse of Madness</h3>
-					<p class="genre">Action, Superhero, Sci-Fi, Adventure, Fantasy</p>
+					<h3 class="title">
+						<span>Doctor Strange</span> In The Multiverse of Madness
+					</h3>
+					<p class="genre">
+						Action, Superhero, Sci-Fi, Adventure, Fantasy
+					</p>
 					<button>Show Detail</button>
 				</div>
 				
@@ -64,8 +68,13 @@
 					
 				</div>
 			</content>
+
 			<aside>
-				<h3>sidebar</h3>
+				<h2>Category</h2>
+
+				<div class="movie-category">
+
+				</div>
 			</aside>
 		</main>
 	</div>
